Closed
Bug 604506
Opened 15 years ago
Closed 15 years ago
trunk crash [@ nsMsgDatabase::GetDBFolderInfo(nsIDBFolderInfo**)]
Categories
(MailNews Core :: Database, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.3a1
People
(Reporter: wsmwk, Assigned: standard8)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
747 bytes,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
trunk crash [@ nsMsgDatabase::GetDBFolderInfo(nsIDBFolderInfo**)]
#2 crash on trunk currently. but crash goes way back in time.
three main variations as far as I can tell, distinguished by the second frame. Majority are the first variation. By the startup times, all can be startup crashes, but not exceptionally so.
bp-a49180ee-307f-4b56-942f-9695f2100916
0 thunderbird.exe nsMsgDatabase::GetDBFolderInfo mailnews/db/msgdb/src/nsMsgDatabase.cpp:1450
1 thunderbird.exe nsMsgLocalMailFolder::GetDatabaseWithReparse mailnews/local/src/nsLocalMailFolder.cpp:529
2 xpcom_core.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
3 thunderbird.exe XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2312
4 thunderbird.exe XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1751
5 mozjs.dll js::Interpret js/src/jsinterp.cpp:4477
6 mozjs.dll js::Invoke js/src/jsinterp.cpp:592
7 mozjs.dll generator_op js/src/jsiter.cpp:1399
8 mozjs.dll js::Interpret js/src/jsinterp.cpp:4477
9 mozcrt19.dll arena_dalloc_small objdir-tb/mozilla/memory/jemalloc/crtsrc/jemalloc.c:4153
10 mozjs.dll js::RunScript js/src/jsinterp.cpp:484
11 mozjs.dll SendToGenerator js/src/jsiter.cpp:1285
12 mozjs.dll generator_next js/src/jsiter.cpp:1414
13 mozjs.dll js::Interpret js/src/jsinterp.cpp:4477
14 thunderbird.exe XPCConvert::NativeData2JS js/src/xpconnect/src/xpcprivate.h:3164
bp-15665ecf-f2d3-43aa-a84b-8f5c92101014 (this variation has rare 1.9.1 branch crashes like bp-60326cba-1066-4686-950c-f3e892091229 - less than 5 in the last 8 months)
0 xul.dll nsMsgDatabase::GetDBFolderInfo mailnews/db/msgdb/src/nsMsgDatabase.cpp:1450
1 xul.dll nsImapMailFolder::GetDBFolderInfoAndDB mailnews/imap/src/nsImapMailFolder.cpp:2132
2 xul.dll nsMsgDBFolder::ReadDBFolderInfo mailnews/base/util/nsMsgDBFolder.cpp:661
3 xul.dll nsMsgDBFolder::UpdateSummaryTotals mailnews/base/util/nsMsgDBFolder.cpp:3987
4 xul.dll nsImapMailFolder::UpdateSummaryTotals mailnews/imap/src/nsImapMailFolder.cpp:1817
5 xul.dll nsMsgDBFolder::EndFolderLoading mailnews/base/util/nsMsgDBFolder.cpp:411
6 xul.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
7 xul.dll XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2312
8 xul.dll XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1752
9 mozjs.dll js::Interpret js/src/jsinterp.cpp:4625
10 mozjs.dll js::Invoke js/src/jsinterp.cpp:746
11 mozjs.dll js::ExternalInvoke js/src/jsinterp.cpp:776
12 mozjs.dll js::ExternalGetOrSet js/src/jsinterp.cpp:796
13 mozjs.dll js::Shape::set js/src/jsscopeinlines.h:240
14 mozjs.dll js_SetPropertyHelper js/src/jsobj.cpp:5264
15 mozjs.dll js::Interpret js/src/jsinterp.cpp:4324
16 mozjs.dll js::RunScript js/src/jsinterp.cpp:638
17 mozjs.dll js::Invoke js/src/jsinterp.cpp:746
18 mozjs.dll js::ExternalInvoke js/src/jsinterp.cpp:776
19 mozjs.dll JS_CallFunctionValue js/src/jsapi.cpp:4836
20 xul.dll nsJSContext::CallEventHandler dom/base/nsJSEnvironment.cpp:2140
bp-5355cb43-c6a8-40b8-b0c0-87fdb2100923
0 thunderbird.exe nsMsgDatabase::GetDBFolderInfo mailnews/db/msgdb/src/nsMsgDatabase.cpp:1450
1 thunderbird.exe nsOfflineStoreCompactState::FinishCompact mailnews/base/src/nsMsgFolderCompactor.cpp:1042
2 thunderbird.exe nsOfflineStoreCompactState::OnStopRequest mailnews/base/src/nsMsgFolderCompactor.cpp:1004
3 thunderbird.exe nsImapCacheStreamListener::OnStopRequest mailnews/imap/src/nsImapProtocol.cpp:8553
4 thunderbird.exe nsInputStreamPump::OnStateStop netwerk/base/src/nsInputStreamPump.cpp:578
5 thunderbird.exe nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:403
6 xpcom_core.dll nsInputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:112
7 xpcom_core.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:547
8 xpcom_core.dll NS_ProcessNextEvent_P objdir-tb/mozilla/xpcom/build/nsThreadUtils.cpp:250
| Reporter | ||
Updated•15 years ago
|
Version: 1.9.2 Branch → Trunk
| Assignee | ||
Comment 1•15 years ago
|
||
This is a regression from bug 570582. I'll have a patch up in a bit.
| Assignee | ||
Comment 2•15 years ago
|
||
Addrefing something that isn't there is not a good idea... I swapped the function around so that we just fail out first which makes it a bit clearer.
I've also removed a couple of redundant comments (e.g. because its an interface function we know that we have to release the returned item).
Attachment #485677 -
Flags: review?(bienvenu)
Updated•15 years ago
|
Attachment #485677 -
Flags: review?(bienvenu) → review+
| Assignee | ||
Comment 3•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a1
Updated•14 years ago
|
Crash Signature: [@ nsMsgDatabase::GetDBFolderInfo(nsIDBFolderInfo**)]
You need to log in
before you can comment on or make changes to this bug.
Description
•