Bug 604506 - trunk crash [@ nsMsgDatabase::GetDBFolderInfo(nsIDBFolderInfo**)]; r=bienvenu